--- a/Makefile.win
+++ b/Makefile.win
@@ -4,8 +4,8 @@
 CPP      = g++.exe
 CC       = gcc.exe
 WINDRES  = windres.exe
-OBJ      = Gestos_de_textos.o Conjunt_de_cites.o Text.o
-LINKOBJ  = Gestos_de_textos.o Conjunt_de_cites.o Text.o
+OBJ      = Gestos_de_textos.o Conjunt_de_cites.o Text.o Autor.o
+LINKOBJ  = Gestos_de_textos.o Conjunt_de_cites.o Text.o Autor.o
 LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib" -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc
 INCS     = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
 CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
@@ -32,3 +32,6 @@ Conjunt_de_cites.o: Conjunt_de_cites.cc
 
 Text.o: Text.cc
 	$(CPP) -c Text.cc -o Text.o $(CXXFLAGS)
+
+Autor.o: Autor.cc
+	$(CPP) -c Autor.cc -o Autor.o $(CXXFLAGS)
