--- a/Makefile.win
+++ b/Makefile.win
@@ -4,8 +4,8 @@
 CPP      = g++.exe
 CC       = gcc.exe
 WINDRES  = windres.exe
-OBJ      = Gestos_de_textos.o Conjunt_cites.o Text.o Autor.o Cita.o Consultes.o Conjunt_autors.o
-LINKOBJ  = Gestos_de_textos.o Conjunt_cites.o Text.o Autor.o Cita.o Consultes.o Conjunt_autors.o
+OBJ      = Gestor_de_textos.o Conjunt_cites.o Text.o Autor.o Cita.o Consultes.o Conjunt_autors.o
+LINKOBJ  = Gestor_de_textos.o Conjunt_cites.o Text.o Autor.o Cita.o Consultes.o Conjunt_autors.o
 LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib" -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc
 INCS     = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
 CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
@@ -24,8 +24,8 @@ clean: clean-custom
 $(BIN): $(OBJ)
 	$(CPP) $(LINKOBJ) -o $(BIN) $(LIBS)
 
-Gestos_de_textos.o: Gestos_de_textos.cc
-	$(CPP) -c Gestos_de_textos.cc -o Gestos_de_textos.o $(CXXFLAGS)
+Gestor_de_textos.o: Gestor_de_textos.cc
+	$(CPP) -c Gestor_de_textos.cc -o Gestor_de_textos.o $(CXXFLAGS)
 
 Conjunt_cites.o: Conjunt_cites.cc
 	$(CPP) -c Conjunt_cites.cc -o Conjunt_cites.o $(CXXFLAGS)
