--- a/Makefile.win
+++ b/Makefile.win
@@ -4,8 +4,8 @@
 CPP      = g++.exe
 CC       = gcc.exe
 WINDRES  = windres.exe
-OBJ      = Gestor_de_textos.o Conjunt_cites.o Text.o Autor.o Cita.o Consultes.o Conjunt_autors.o
-LINKOBJ  = Gestor_de_textos.o Conjunt_cites.o Text.o Autor.o Cita.o Consultes.o Conjunt_autors.o
+OBJ      = Gestor_de_textos.o Conjunt_cites.o Text.o Autor.o Cita.o Consultes.o Conjunt_autors.o program.o
+LINKOBJ  = Gestor_de_textos.o Conjunt_cites.o Text.o Autor.o Cita.o Consultes.o Conjunt_autors.o program.o
 LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib" -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc
 INCS     = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
 CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
@@ -44,3 +44,6 @@ Consultes.o: Consultes.cc
 
 Conjunt_autors.o: Conjunt_autors.cc
 	$(CPP) -c Conjunt_autors.cc -o Conjunt_autors.o $(CXXFLAGS)
+
+program.o: program.cc
+	$(CPP) -c program.cc -o program.o $(CXXFLAGS)
